const-generics-impl-tests/tests/compile_fail/fn_precondition_missing.rs
include!("../../../tests/fn_precondition_missing.rs");
